--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Run script
       run: python main.py
       env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
  
     - name: Upload output.json
       uses: actions/upload-artifact@v4
