--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -20,11 +20,14 @@ jobs:
 
     - name: Install dependencies
       run: pip install -r requirements.txt
-
+    - name: Debug Token
+      run: echo "GH_TOKEN is $GH_TOKEN"
+      env:
+        GH_TOKEN: ${{ secrets.GH_TOKENN }}
     - name: Run script
       run: python main.py
       env:
-          GH_TOKEN: ${{ secrets.GH_TOKENN }}
+        GH_TOKEN: ${{ secrets.GH_TOKENN }}
  
     - name: Upload output.json
       uses: actions/upload-artifact@v4
